ola-parser/src/testdata/syntaxTests/structs/member_type_func.sol
contract C {
  fn f() public {}
  struct S {f x;}
  fn g(fn(S memory) external) public {}
}
// ----
// TypeError 5172: (50-51): Name has to refer to a struct, enum or contract.
